# watchysim-sdl2

./: .gitignore  CMakeLists.txt  README.md
WatchySim/: Watchy.cpp  Watchy.h  compat.h  main_qt.cpp  main_sdl.cpp
WatchySim/WatchFaces/7_SEG/: settings.h
WatchySim/WatchFaces/DOS/: Px437_IBM_BIOS5pt7b.h
WatchySim/WatchFaces/GoodMorning/: Watchy_GoodMorning.cpp  Watchy_GoodMorning.h
WatchySim/WatchFaces/Mario/: settings.h
WatchySim/WatchFaces/Multiday/: Watchy_Multiday.cpp  Watchy_Multiday.h
WatchySim/WatchFaces/PowerShell/: Watchy_PowerShell.cpp  Watchy_PowerShell.h
WatchySim/WatchFaces/Stats/: Watchy_Stats.cpp  Watchy_Stats.h
WatchySim/arduino/: String.cpp  dtostrf.cpp
